# UW_StreamSpeech

./: .gitattributes  .gitignore  README.md  download_dataset_and_eval.sh  download_dataset_and_train.sh  download_pretrain.sh  download_pretrain_models.sh  eval_job.slurm  pixi.toml  pyproject.toml  simuleval.simul-s2st.sh  train.simul-s2st-tuochao.sh  train_job.slurm
SimulEval/: pyproject.toml
SimulEval/src/simuleval/: __init__.py
agent/: ctc_decoder.py  ctc_generator.py  sequence_generator.py  speech_to_speech.streamspeech.agent.py  speech_to_speech.wait-k-stride-n.agent.py  speech_to_text.asr.streamspeech.agent.py  speech_to_text.s2tt.streamspeech.agent.py  speech_to_text.wait-k-stride-n.agent.py
agent/tts/: vocoder.py
demo/: app.py  infer.py
fairseq/: pyproject.toml
fairseq/fairseq/models/: __init__.py
fairseq/fairseq/tasks/: speech_to_speech.py
preprocess_scripts/: convert_s2st_tsv_to_s2tt_mtl_tsv.py  convert_s2st_tsv_to_s2tt_tsv.py  data_utils.py  extract_ref_txt.py  extract_ref_unit.py  extract_simuleval_data.py  extract_simuleval_src.py  extract_simuleval_unit.py  extract_src_txt.py  prep_cvss_c_multilingual_data.py  prep_cvss_c_multitask_data.py  prep_global_cmvn.py  preprocess.sh  utils.py
pretrain_models/: README.md
researches/audio/: __init__.py
researches/chunk_unity/models/: s2s_conformer.py  streaming_speech_encoder.py
researches/ctc_unity/: ctc_decoder.py  ctc_generator.py  sequence_generator_multi_decoder_ctc.py
researches/ctc_unity/criterions/: __init__.py  speech_to_speech_criterion.py  speech_to_speech_ctc_asr_st_criterion.py  speech_to_speech_ctc_criterion.py  speech_to_speech_ctc_waitk_criterion.py
researches/ctc_unity/datasets/: speech_to_speech_dataset_modified.py  speech_to_text_dataset_modified.py
researches/ctc_unity/models/: s2s_conformer.py  s2s_transformer.py  s2t_conformer.py  streaming_speech_encoder.py  streamspeech_model.py
researches/ctc_unity/modules/: chunk_causal_conv1d.py  convolution.py  ctc_decoder.py  ctc_transformer_unit_decoder.py  encoder_conformer_layer.py  multihead_attention.py  simultaneous_text_decoder.py  streaming_speech_encoder.py  streaming_speech_encoder_convolution_layer.py  streaming_speech_encoder_convolution_layer_base.py  streaming_speech_encoder_convolution_subsampler.py  streaming_speech_encoder_feed_forward_network.py  streaming_speech_encoder_layer.py  text_to_unit_encoder.py  transformer_decoder.py  transformer_decoder_base.py  transformer_decoder_base_layer.py  unit_ctc_decoder.py
researches/ctc_unity/tasks/: speech_to_speech_ctc.py  speech_to_speech_modified.py  speech_to_speech_uw.py  speech_to_text_modeified.py
researches/diseg/models/: convtransformer_seg.py  convtransformer_wav2vec_seg.py  s2t_transformer_seg.py  wav2vec2.py
researches/diseg/modules/: seg_encoder_layer.py  waitseg_decoder_layer.py
researches/diseg/tasks/: speech_to_text_multitask.py
researches/hmt/: hmt_model.py  hmt_translation_task.py
researches/tasks/: __init__.py
researches/translatotron/: sequence_generator_multi_decoder.py
researches/translatotron/datasets/: speech_to_text_dataset_modified.py
researches/translatotron/models/: s2s_conformer_translatotron2_modified.py  s2s_conformer_unity_modified.py  s2s_transformer_unity_modified.py  s2t_conformer_modified.py
researches/translatotron/postprocess/: remove_blank.py
researches/translatotron/tasks/: speech_to_speech_modified.py  speech_to_text_modeified.py
researches/types/: __init__.py
researches/uni_unity/criterions/: speech_to_speech_waitk_criterion.py
researches/uni_unity/datasets/: speech_to_text_dataset_modified.py
researches/uni_unity/models/: s2s_transformer.py  s2t_conformer.py
researches/uni_unity/modules/: conformer_layer.py  convolution.py  espnet_multihead_attention.py  multihead_attention.py  transformer_layer.py
researches/uni_unity/tasks/: speech_to_speech_modified.py  speech_to_text_modeified.py
researches/uni_unity/test_scripts/: pred.sh
researches/unitY/test_scripts/: pred.sh
typings/fairseq/: __init__.pyi  binarizer.pyi  checkpoint_utils.pyi  file_chunker_utils.pyi  file_io.pyi  file_utils.pyi  hub_utils.pyi  incremental_decoding_utils.pyi  iterative_refinement_generator.pyi  nan_detector.pyi  ngram_repeat_block.pyi  options.pyi  pdb.pyi  quantization_utils.pyi  registry.pyi  search.pyi  sequence_generator.pyi  sequence_scorer.pyi  speech_generator.pyi  token_generation_constraints.pyi  tokenizer.pyi  trainer.pyi  utils.pyi
typings/fairseq/benchmark/: __init__.pyi  dummy_dataset.pyi  dummy_lm.pyi  dummy_masked_lm.pyi  dummy_model.pyi  dummy_mt.pyi
typings/fairseq/criterions/: __init__.pyi  ctc.pyi  fairseq_criterion.pyi  label_smoothed_cross_entropy.pyi  tacotron2_loss.pyi  (+2 more)
(+269 files in other folders)
