[project]
name = "uw-streamspeech"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "cython==3.0.10",
    "ffmpeg>=1.4",
    "numpy>=1.26,<2.0",
    "sox>=1.5.0",
    "torch==2.0.1",
    "torchaudio==2.0.2",
    "torchvision==0.15.2",
    "simuleval",
    "editdistance",
    "sentencepiece>=0.2.0",
    "fairseq",
]

[tool.uv]
cache-dir = ".uv-cache/"

[tool.uv.sources]
simuleval = { workspace = true }
fairseq = { git = "https://github.com/facebookresearch/fairseq", rev = "d9a627082fd03ec72a27a31a4e56289bfcb2e4e4" }

[tool.uv.workspace]
members = ["SimulEval"]

[dependency-groups]
dev = [
    "basedpyright>=1.24.0",
    "ruff>=0.9.1",
]

