[project]
name = "simuleval"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
        "pytest",
        "pytest-cov",
        "sacrebleu==2.3.1",
        "tornado",
        "soundfile",
        "pandas",
        "requests",
        "pytest-flake8",
        "textgrid",
        "tqdm==4.64.1",
        "pyyaml",
        "bitarray==2.6.0",
        "yt-dlp",
        "pydub",
    ]

[project.scripts]
simuleval = "simuleval.cli:main"

[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.build_meta"
